tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0015]: cannot call non-const fn `<u32 as Plus>::plus` in constant functions
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
